@@ -1,2 +1,2 @@
-pytest==3.0.5 # Updated from 3.0.4
+pytest==3.0.6 # Updated from 3.0.4
 pytest-rerunfailures==2.1.0 # Updated from 2.0.1
