@@ -1,8 +1,8 @@
 __title__ = 'tmuxp'
 __package_name__ = 'tmuxp'
-__version__ = '1.2.4'
+__version__ = '1.2.5'
 __description__ = 'tmux session manager'
 __email__ = 'tony@git-pull.com'
 __author__ = 'Tony Narlock'
 __license__ = 'BSD'
-__copyright__ = 'Copyright 2013-2016 Tony Narlock'
+__copyright__ = 'Copyright 2013-2017 Tony Narlock'
