@@ -26,6 +26,9 @@ logger = logging.getLogger(__name__)
 
 
 def get_config_dir():
+    if 'TMUXP_CONFIGDIR' in os.environ:
+        return os.path.expanduser(os.environ['TMUXP_CONFIGDIR'])
+
     return os.path.expanduser('~/.tmuxp/')
 
 
@@ -69,18 +72,18 @@ def is_pure_name(path):
     )
 
 
-def _create_resolve_config_argument(config_dir):
+def _create_scan_config_argument(config_dir):
     """For finding configurations in tmuxinator/teamocil"""
     def func(ctx, param, value):
-        return resolve_config_argument(ctx, param, value, config_dir)
+        return scan_config_argument(ctx, param, value, config_dir)
 
     return func
 
 
-def resolve_config_argument(ctx, param, value, config_dir=None):
+def scan_config_argument(ctx, param, value, config_dir=None):
     """Validate / translate config name/path values for click config arg.
 
-    Wrapper on top of :func:`cli.resolve_config`."""
+    Wrapper on top of :func:`cli.scan_config`."""
     if callable(config_dir):
         config_dir = config_dir()
 
@@ -90,11 +93,11 @@ def resolve_config_argument(ctx, param, value, config_dir=None):
         ctx.exit()
 
     if isinstance(value, string_types):
-        value = resolve_config(value, config_dir=config_dir)
+        value = scan_config(value, config_dir=config_dir)
 
     elif isinstance(value, tuple):
         value = tuple(
-            [resolve_config(v, config_dir=config_dir) for v in value])
+            [scan_config(v, config_dir=config_dir) for v in value])
 
     return value
 
@@ -120,7 +123,7 @@ def _resolve_path_no_overwrite(config):
     return path
 
 
-def resolve_config(config, config_dir=None):
+def scan_config(config, config_dir=None):
     """Return the real config path or raise an exception.
 
     :param config: config file, valid examples:
@@ -445,7 +448,7 @@ def command_freeze(session_name, socket_name, socket_path):
 @cli.command(name='load', short_help='Load tmuxp workspaces.')
 @click.pass_context
 @click.argument('config', click.Path(exists=True), nargs=-1,
-                callback=resolve_config_argument)
+                callback=scan_config_argument)
 @click.option('-S', 'socket_path', help='pass-through for tmux -L')
 @click.option('-L', 'socket_name', help='pass-through for tmux -L')
 @click.option('--yes', '-y', 'answer_yes', help='yes', is_flag=True)
@@ -576,7 +579,7 @@ def import_config(configfile, importfunc):
                            short_help='Convert and import a teamocil config.')
 @click.argument(
     'configfile', click.Path(exists=True), nargs=1,
-    callback=_create_resolve_config_argument(get_teamocil_dir)
+    callback=_create_scan_config_argument(get_teamocil_dir)
 )
 def command_import_teamocil(configfile):
     """Convert a teamocil config from CONFIGFILE to tmuxp format and import
@@ -590,7 +593,7 @@ def command_import_teamocil(configfile):
     short_help='Convert and import a tmuxinator config.')
 @click.argument(
     'configfile', click.Path(exists=True), nargs=1,
-    callback=_create_resolve_config_argument(get_tmuxinator_dir)
+    callback=_create_scan_config_argument(get_tmuxinator_dir)
 )
 def command_import_tmuxinator(configfile):
     """Convert a tmuxinator config from CONFIGFILE to tmuxp format and import
@@ -600,7 +603,7 @@ def command_import_tmuxinator(configfile):
 
 @cli.command(name='convert')
 @click.argument('config', click.Path(exists=True), nargs=1,
-                callback=resolve_config_argument)
+                callback=scan_config_argument)
 def command_convert(config):
     """Convert a tmuxp config between JSON and YAML."""
 
