@@ -4,6 +4,12 @@ Changelog
 
 Here you can find the recent changes to tmuxp
 
+- :release:`1.2.5 <2017-02-08>`
+- :feature:`207` add custom tmuxp config directory via ``TMUXP_CONFIGDIR``
+  variable.
+- :support:`199` support for running tmuxp on tmux ``master``.
+- :support:`-` update libtmux from 0.6.2 to 0.6.3.
+
 - :release:`1.2.4 <2017-01-13>`
 - :bug:`198` bump click from 6.6 to 6.7
 - :support:`195` pin packages for colorama and doc requirements
